added stuff to intro and started inproving edition after svabhavabhēda section

--- a/bindu.bib
+++ b/bindu.bib
@@ -12,6 +12,30 @@
   keywords    = {seclit},
 }
 
+@article{ogawa2023perception,
+  title={The Perception of the Self in the Nyāya Tradition: From a Kāraka Point of View},
+  author={Ogawa, Hideyo},
+  year={2023},
+  journal={Tetsugaku: The Journal of Hiroshima Philosophical Society},
+  volume={75},
+  pages={155--170},
+ keywords={seclit}, 
+}
+
+@inproceedings{balcerowicz2011dharmakirti,
+  title={Dharmakīrti’s Criticism of the Jaina Doctrine of Multiplexity of Reality (\textit{anekāntavāda})},
+  author={Balcerowicz, Piotr},
+  booktitle={Religion and Logic in Buddhist Philosophical Analysis: Proceedings of the Fourth International Dharmakīrti Conference, Vienna, August 23–27, 2005},
+  editor={Krasser, Helmut and Lasic, Horst and Franco, Eli and Kellner, Birgit},
+  year={2011},
+  publisher={Verlag der Österreichischen Akademie der Wissenschaften},
+  address={Wien},
+  series={Österreichische Akademie der Wissenschaften Philosophisch-Historische Klasse, Denkschriften},
+  volume={424},
+  pages={1--33}, 
+  keywords={seclit},
+}
+
 @book{haasgayatri, 
  author={Haas, Dominik A.}, 
  title={Gāyatrī}, 
