--- a/intro.tex
+++ b/intro.tex
@@ -310,8 +310,8 @@ The Yoga made of liberation through action[s] bestows success in one's own body.
 \textit{yat karomīti saṅkalpaṃ kāryārambhe manaḥ sadā} |\\
 \textit{tat sāṅgācaraṇaṃ kurvan kriyāyogarato bhavet} || 2 ||
 
-(2) ``Whatever I do'' at the beginning of an action, the mind always has intention.  
-Doing that undertaking with all its parts, one becomes established in Kriyāyoga. 
+(2) ``Whatever I do'' at the beginning of an action, the mind always has an intention.  
+Doing that [following] procedure with all its parts, one becomes established in Kriyāyoga.  
 
 \textit{kṣamāvivekavairāgyaśāntisantoṣanispṛhāḥ} |\\
 \textit{etad yuktiyuto yo'sau kriyāyogo nigadyate} || 3 ||
@@ -335,12 +335,12 @@ Whoever does not experience these is called a Kriyāyogī.
 \textit{kriyāmuktikaro yo'sau rājayogaḥ sa muktidaḥ} || 6 ||(om. YK)
 
 (6) He alone, the wise one, the lord, through the destruction of impetuous [behaviour]
-who performs the liberation through action[s] is liberated. This Rājayoga is the giver of liberation.
+who performs the liberation through action[s] is liberated. This Rājayoga is the bestower of liberation.
 
 \textit{yāvan mano layaṃ yāti kṛṣṇe svātmani cinmaye} | \\ 
 \textit{bhaved iṣṭamanā mantrī japahomau samabhyaset} || 7 ||\footnote{7ab \approx \citetitle{rudrayamala1937} 38.58cd.}(om. YSv) 
 
-(7) Until the mind enters absorption [and] would be in Kṛṣṇa, in one's own self, filled with consciousness,
+(7) Until the mind enters absorption into Kṛṣṇa, in one's own self, into consciousness,
 the mantra practitioner (\textit{mantrin}) should practise recitation and fire sacrifice with an aspiring mind. 
 
 \textit{vidite paratattve tu samastair niyamair alam} |\\
@@ -362,13 +362,13 @@ The main difference to the Kriyāyoga that Rāmacandra has constructed from thes
 
 In the three verses concluding this section, which are only handed down in the \textit{Yogakarṇikā}, the practitioner is referred to as \textit{mantrin} and should perform recitation and fire offerings until entering absorption (\textit{laya}).
 
-Thus, this concept of Kriyāyoga in the \textit{Yogasvarodaya} might be a reference to the \textit{kriyāpāda}\footnote{See e.g. \citeauthor{ganesan2016saiva} (2016) and \citetitle{mrgendragama}, Ed. pp. 1-205.} of the Śaiva \textit{āgama}s. The Śaiva \textit{āgama}s are collections of various tantric traditions, written in Sanskrit or Tamil, in which cosmology, epistemology, philosophical teachings, various practices such as meditation or Yoga, mantra recitation, worship of the gods, etc. are described. These texts\footnote{The fourfold division of \textit{pāda}s is only present in a limited number of Āgamas: \textit{Kiraṇa}, \textit{Suprabheda}, \textit{Mṛgendra} and \textit{Mataṅgaparameśvara} (as Upāgamas), see \citeauthor{brunner1994place} , 1993: 225-461 for an overview.} usually consist of four sections (\textit{pāda}s): The \textit{jñānapāda} (knowledge section), \textit{kriyāpāda} (action section), \textit{caryāpāda} (behaviour section) and the \textit{yogapāda} (yoga section).\footnote{The order or the \textit{pāda}s varies, but the \textit{yogapāda} is always the last.} It can be no coincidence that \textit{jñāna°}, \textit{kriyā°} and \textit{caryā°} were each integrated as a separate Yoga category within the taxonomy of the fifteen Yogas\footnote{see p.\pageref{intro}.}. The \textit{kriyāpāda} is the section of a Śaiva \textit{āgama} that describes rules and practices for the performance of various rituals such as the significant initiation (\textit{dīkṣa}), ceremonies and worship of the gods. Additionally, \textit{prāṇāyāma} techniques and meditations are often found as parts of these rituals. There are also explanations of the nature of \textit{mudrā}s, \textit{maṇḍala}s and \textit{mantra}s. Furthermore, various characteristics of different types of Śaiva initiates\footnote{These are \textit{samayin, putraka, sādhaka, ācārya,} and \textit{astrābhiṣeka}.} can be found here.\footnote{See \citeauthor{ganesan2016saiva} (2016) for a general overview of the four \textit{pāda}s. One of the few Śaiva \textit{āgama}s that has been edited and translated into a Western language (French) is the \citetitle{mrgendragama}. For this see \citeauthor{mrgendragama} (1962) \& \citeauthor{mrgendragamabrunner} (1985).} The \textit{kriyā}s mentioned at the beginning of the \textit{Yogasvarodaya} - meditation, ritual veneration, donation, recitation, fire sacrifice, etc. have hardly deniable parallels to the \textit{kriyāpāda}s of the Śaiva \textit{āgama}s and thus could have their reception-historical roots precisely there. The other part, however, which describes the cultivation or reduction of certain mental configurations preceding all actions (\textit{saṅkalpa}) or [mental] waves (\textit{kallola}), I have not yet been able to locate in the Śaiva \textit{āgama}s, but possibly they are a simplyfied rendering of the Pātañjalean model of Kriyāyoga that was passend on in hitherto unknown traditions that practiced this type of Kriyāyoga.
+A possible historical link, particularly in front of the Vaiṣṇava background, is the model of Kriyāyoga as found in the \textit{Uddhavagīta}\footnote{See i.e., \citeauthor{uddhavagita2007} (2007).} which is a part of the famous \textit{Bhāgavatapurāṇa}\footnote{See i.e., \citeauthor{bhagavata} (1950).}. Here, in chapter XXII.1-55 Kṛṣṇa describes a Vaiṣṇava form of Kriyāyoga in response to a request by his disciple Uddhava. The practice entails a very complex and devotional ceremonial veneration of the deity through offerings such as flowers and food, accompanied by the recitation of prescribed mantras, meditation, and the ritual consecration of the deity, among other rites. According to the text, this type of Yoga is the most beneficial for women and the working class (22.4) and is considered a means for liberation from the fetters of Karma (22.5). The Kriyāyoga described here is presented to be in line with both the Vedas and the Tantras, considering enjoyment (\textit{bhukti}) and liberation (\textit{mukti}) and is promised to bestow perfection in both this life and the next, by the Lord's grace (22.49).  
 
-One other possible historical link which should not remain unmentioned is the model of Kriyāyoga found in the \textit{Uddhavagīta}\footnote{See i.e., \citeauthor{uddhavagita2007} (2007).} which is a part of the famous \textit{Bhāgavatapurāṇa}\footnote{See i.e., \citeauthor{bhagavata} (1950).}. Here, in chapter XXII.1-55 Kṛṣṇa describes a Vaiṣṇava form of Kriyāyoga in response to a request by his disciple Uddhava. The practice entails a very complex and devotional ceremonial veneration of the deity through offerings such as flowers and food, accompanied by the recitation of prescribed mantras, meditation, and the ritual consecration of the deity, among other rites. According to the text, this type of Yoga is the most beneficial for women and the working class (22.4) and is considered a means for liberation from the fetters of Karma (22.5). The Kriyāyoga described here is presented to be in line with both the Vedas and the Tantras, considering enjoyment (\textit{bhukti}) and liberation (\textit{mukti}) and is promised to bestow perfection in both this life and the next, by the Lord's grace (22.49).  
+Furthermore, this concept of Kriyāyoga in the \textit{Yogasvarodaya} might be linked to the \textit{kriyāpāda}\footnote{See e.g. \citeauthor{ganesan2016saiva} (2016) and \citetitle{mrgendragama}, Ed. pp. 1-205.} of the Śaiva \textit{āgama}s. The Śaiva \textit{āgama}s are collections of various tantric traditions, written in Sanskrit or Tamil, in which cosmology, epistemology, philosophical teachings, various practices such as meditation or Yoga, mantra recitation, worship of the gods, etc. are described. These texts\footnote{The fourfold division of \textit{pāda}s is only present in a limited number of Āgamas: \textit{Kiraṇa}, \textit{Suprabheda}, \textit{Mṛgendra} and \textit{Mataṅgaparameśvara} (as Upāgamas), see \citeauthor{brunner1994place} , 1993: 225-461 for an overview.} usually consist of four sections (\textit{pāda}s): The \textit{jñānapāda} (knowledge section), \textit{kriyāpāda} (action section), \textit{caryāpāda} (behaviour section) and the \textit{yogapāda} (yoga section).\footnote{The order or the \textit{pāda}s varies, but the \textit{yogapāda} is always the last.} It can be no coincidence that \textit{jñāna°}, \textit{kriyā°} and \textit{caryā°} were each integrated as a separate Yoga category within the taxonomy of the fifteen Yogas\footnote{see p.\pageref{intro}.}. The \textit{kriyāpāda} is the section of a Śaiva \textit{āgama} that describes rules and practices for the performance of various rituals such as the significant initiation (\textit{dīkṣa}), ceremonies and worship of the gods. Additionally, \textit{prāṇāyāma} techniques and meditations are often found as parts of these rituals. There are also explanations of the nature of \textit{mudrā}s, \textit{maṇḍala}s and \textit{mantra}s. Furthermore, various characteristics of different types of Śaiva initiates\footnote{These are \textit{samayin, putraka, sādhaka, ācārya,} and \textit{astrābhiṣeka}.} can be found here.\footnote{See \citeauthor{ganesan2016saiva} (2016) for a general overview of the four \textit{pāda}s. One of the few Śaiva \textit{āgama}s that has been edited and translated into a Western language (French) is the \citetitle{mrgendragama}. For this see \citeauthor{mrgendragama} (1962) \& \citeauthor{mrgendragamabrunner} (1985).} The \textit{kriyā}s mentioned at the beginning of the \textit{Yogasvarodaya} - meditation, ritual veneration, donation, recitation, fire sacrifice, etc. have hardly deniable parallels to the \textit{kriyāpāda}s of the Śaiva \textit{āgama}s and thus could have their reception-historical roots precisely there. The other part, however, which describes the cultivation or reduction of certain mental configurations preceding all actions (\textit{saṅkalpa}) or [mental] waves (\textit{kallola}), I have not yet been able to locate in the Śaiva \textit{āgama}s, but they seem to be a simplyfied rendering of the Pātañjalean model of Kriyāyoga that was passend on in hitherto unknown traditions that practiced this type of Kriyāyoga.
 
 \subsection{The concept of Kriyāyoga in the \textit{Yogasiddhāntacandrikā}}
 
-The Kriyāyoga in Nārāyaṇatīrtha's commentary on \textit{Pātañjalayogaśāstra} entitled \textit{Yogasiddhāntacandrikā} presents Kriyāyoga as the first of his fifteen Yogas, which he locates in Pātañjalayoga. The term Kriyāyoga occurs in \textit{Pātañjalayogaśāstra} 2.1. According to the introduction to this Sūtra, in the \textit{bhāṣya}-part of the \textit{Pātañjalayogaśāstra}, Kriyāyoga is the means by which someone with a distracted mind can also attain Yoga (\textit{vyutthitacitto 'pi yogayuktaḥ}). In \citetitle{yogasutra} 2.1, Kriyāyoga is defined as follows:
+The Kriyāyoga in Nārāyaṇatīrtha's commentary on \textit{Pātañjalayogaśāstra} entitled \textit{Yogasiddhāntacandrikā} presents Kriyāyoga as the first of his fifteen Yogas, which he locates in Pātañjalayoga. The term Kriyāyoga occurs in \textit{Pātañjalayogaśāstra} 2.1. According to the introduction to this \textit{sūtra}, in the \textit{bhāṣya}-part of the \textit{Pātañjalayogaśāstra}, Kriyāyoga is the means by which someone with a distracted mind can also attain Yoga (\textit{vyutthitacitto 'pi yogayuktaḥ}). In \citetitle{yogasutra} 2.1, Kriyāyoga is defined as follows:
 \begin{quote}  
   \textit{tapaḥsvādhyāyeśvarapraṇidhānāni kriyāyogaḥ} |
 \end{quote}
@@ -457,17 +457,49 @@ Goswami \citeauthor{kriyayogaupanishad1993} learnt Kriyāyoga from his teacher S
 
 In the \textit{Kriya Yoga Upanishad}, the disciple Sanskriti asks the guru Dattatreya to teach him the teachings of Kriyāyoga. The latter agrees and explains Kriyāyoga in a total of ten chapters. The framework is formed by the eight-limbed Yoga system presented in 1.5, similar to the eight limbs of the Pātañjala scheme. The first chapter (1.6-25) presents the \textit{Ten Spiritual Restraints}. Dattatreya explains the \textit{Ten Spiritual Observances} in the second chapter (2.1-16). Chapter three, \textit{The Nine Postures} (3.1-13), deals with nine \textit{āsana}s with six sitting postures, one standing posture and one complex posture. The fourth chapter (4.1-63) discusses what \citeauthor{kriyayogaupanishad1993} calls \textit{Mystical Anatomy}. Here, six \textit{cakra}s named after the planets (i.e. the \textit{mūlādhāracakra} is called the ``Saturn mass-energy converter \textit{cakra}''), fourteen primary \textit{nāḍī}s and \textit{Kriya Kundalini}, which covers the `divine creative channel' with its mouth, are taught. The fifth chapter (5.1-14) is entitled \textit{Inner Purification} and contains simple \textit{prāṇāyāma} techniques such as \textit{sūryabhedana} and \textit{candrabhedana}. Chapter six (6.1-39), entitled \textit{Breath Control}, instructs another breathing exercise in combination with meditation on the three \textit{akṣara}s that constitute the sacred syllable \textit{auṃ}. During the inhalation (\textit{pūraka}), the yogi is supposed to meditate on \textit{a}, during the breathing posture on \textit{u} and during the exhalation on \textit{ṃ}. In addition, the breathing technique \textit{śītalī} (6.25) and a technique called \textit{yonimudrā} (6.33-34) are presented. Chapter seven (7.1-10) is about \textit{Withdrawal of the Senses}. The practitioner is instructed to let the breath move through the body in a specific order. The eighth chapter (8.1-9) is entitled \textit{Concentration}. Here, the yogin is meant to inhale and hold the breath at specific bodily locations (not the \textit{cakra}s), which are associated with the five elements and the syllables \textit{ya, ra, va, la} and \textit {ha}, as well as specific deities. The even shorter ninth chapter, \textit{Meditation} (9.1-6), basically only states that the practice of concentration leads to meditation after a while. The tenth chapter, \textit{Samadhi} (10.1-12), then describes the final state of Yoga, which is defined as the ``deep conscious trance in which the yogi experiences Absolute Wisdom''.
 
-\subsection{Hypothesis on the transition from the medieval models to the new models of Kriyāyoga}
+\subsection{Hypothesis on the transition from the late medieval models to the modern models of Kriyāyoga}
 
 The \textit{Yogasvarodaya} and Rāmacandra's \textit{Yogatattvabindu} were written before 1659 CE. Nārāyaṇatīrtha must have lived between 1600 and 1690 CE., and because of that, his \textit{Yogasiddhāntacandrikā} was also written in this timeframe. Sant Sundardās, the author of the \textit{Sarvāṅgayogapradīpikā} lived from 1596 to 1689. Interestingly, Nārāyaṇatīrtha and Sundardās lived in Benares.\footnote{See \citeauthor{burger2014sarvangayogapradipika} (2014: 684) for dating and location of Sundardās and \citeauthor{penna2004} (2004: 24) for dating and location of Nārāyaṇatīrtha.} Thus, we can safely assume that the complex taxonomies of twelve-fifteen Yogas were part of the local discourse of 17th-century Benares. One might speculate that Rāmacandra might also have lived in these surroundings, but this remains uncertain. Lahiḍi Mahāśaya, the person to whom the new forms of Kriyāyoga seem to go back, lived about a century later, from 1828 to 1895 CE. Interestingly, Lahiḍi Mahāśaya is also said to have spent much of his life in Benares. It is, of course, utterly unclear whether Lahiḍi Mahāśaya ever read any of the works mentioned above. However, at least we know that he not only enjoyed an education in philosophy in Benares but also learnt English and Sanskrit.\footnote{\citeauthor{jones2008encyclopedia}, 2008: 255-56.} However, it is likely that the local discourse regarding the religious-spiritual offerings within Benares did not change abruptly. Lahiḍi Mahāśaya also lived as a family man and householder,\footnote{See \citeauthor{autobioyogi}, 1946: ???.} no sectarian affiliations are known so that the whole variety of religious-spiritual offerings of his time were open to him. He was able to combine them freely. As can be seen from the Yoga texts examined in this book, there was no lack of different Yoga categories in Benares between the 17th and 19th centuries CE. Although these were still labelled differently, they were freely combined in practice. Moreover, given the plethora of Yoga practices from different Yoga traditions and Yoga texts presented in the previous chapter and evident in the publications of the new Kriyāyoga consulted, it is not only credible but also plausible that this phenomenon already began with Lahiḍi Mahāśaya, as Yogānanda claims in his autobiography. However, why Lahiḍi Mahāśaya chose the category of Kriyāyoga as the generic term for his Yoga system cannot be answered conclusively. However, I would like to offer an educated guess.
 
-I hypothesize that the term Kriyāyoga, as the generic term for his system of Yoga, was a strategic decision of Lahiḍi Mahāśaya. It is unlikely, and there is no clear evidence that Lahiḍi Mahāśaya knew the \textit{Yogasvarodaya}, \textit{Yogatattvabindu} and \textit{Yogasiddhāntacandrikā}. It is impossible to determine if there ever was any influence of these texts on Lahiḍi Mahāśaya and his new Kriyāyoga system. But if there was, only the fact that all three texts that mention Kriyāyoga as the very first item in their taxonomies could have influenced his decision to unite all possible Yogas and their techniques under the term Kriyāyoga. Another factor could have been that he was consciously or unconsciously driven by the emerging Yogasūtra hype in the West, which triggered a wave of enthusiasm in India. One wonders why he did not choose the term Rājayoga to integrate many systems as others have done before him. Maybe because the term Rājayoga was already used as a generic term for Pātañjalayoga by then.\footnote{See \citeauthor{birch2014}.} Perhaps the term Kriyāyoga had the advantage that it not only formed a link to the popular and hyped \textit{Yogasūtra}, but already provided a basic framework that was very open to interpretation with the three constitutional practices \textit{tapas}, \textit{svādhyāya} and \textit{īśvarapraṇidhāna}, but at the same time left the possibility for the integration of the variety of post-Pātañjalean physical and non-physical Yoga practices from the Tantras and texts of Haṭha- and Rājayoga through a literal interpretation of the compound prefix \textit{kriyā°} in the sense of ``action''. Whether his thoughts went in a similar direction must remain open. However, we must assume that the discursive  environment of Benares at his time certainly played its part in encouraging Lahiḍi Mahāśaya to integrate the various Yogas circulating in the local discourse of his time under one term. 
+I hypothesize that the term Kriyāyoga, as the generic term for his system of Yoga, was a strategic decision of Lahiḍi Mahāśaya. It is unlikely, and there is no clear evidence that Lahiḍi Mahāśaya knew the \textit{Yogasvarodaya}, \textit{Yogatattvabindu} and \textit{Yogasiddhāntacandrikā}. It is impossible to determine if there ever was any influence of these texts on Lahiḍi Mahāśaya and his new Kriyāyoga system. But if there was, only the fact that all three texts that mention Kriyāyoga as the very first item in their taxonomies could have influenced his decision to unite all possible Yogas and their techniques under the term Kriyāyoga. Another factor could have been that he was consciously or unconsciously driven by the emerging Yogasūtra hype in the West, which triggered a wave of enthusiasm in India. One wonders why he did not choose the term Rājayoga to integrate many systems as others have done before him. Maybe because the term Rājayoga was already used as a generic term for Pātañjalayoga by then.\footnote{See \citeauthor{birch2014}.} Perhaps the term Kriyāyoga had the advantage that it not only formed a link to the popular and hyped \textit{Yogasūtra}, but already provided a basic framework that was very open to interpretation with the three constitutional practices \textit{tapas}, \textit{svādhyāya} and \textit{īśvarapraṇidhāna}, but at the same time left the possibility for the integration of the variety of post-Pātañjalean physical and non-physical Yoga practices from the Tantras and texts of Haṭha- and Rājayoga through a literal interpretation of the compound prefix \textit{kriyā°} in the sense of ``action''. Whether his thoughts went in a similar direction must remain open. However, we must assume that the discursive  environment of Benares at his time certainly played its part in encouraging Lahiḍi Mahāśaya to integrate the various Yogas circulating in the local discourse of his time under one term.
 
-\section{Jñānayoga - \uproman{2}}
+\section{2. Jñānayoga}
 \label{jnanayogaintro}
 
-Jñānāyoga\footnote{See section \uproman{21} on p.\pageref{jnanayogastart}-\pageref{jnanayogaend}.} is the second Yoga within Rāmacandra's list of fifteen Yogas as well as his source text, the \textit{Yogasvarodaya}. In Nārāyaṇatīrtha's list of fifteen, Jñānayoga occupies the sixth place. Sundardās positions Jñānayoga at the tenth position in his list of twelve Yogas. Here, it is subsumed under the Sāṅkhyayoga category, the third and final tetrad of his list.
+Jñānāyoga\footnote{See section \uproman{21} and \uproman{22} on p.\pageref{jnanayogastart}-\pageref{endsvabhava}.} is the second Yoga within Rāmacandra's list of fifteen Yogas as well as his source text, the \textit{Yogasvarodaya}. In Nārāyaṇatīrtha's list of fifteen Yogas within the \textit{Yogasiddhāntacandrikā}, Jñānayoga occupies the sixth place. Sundardās positions Jñānayoga at the tenth position in his list of twelve Yogas. Here, it is subsumed under the Sāṅkhyayoga category, the third and final tetrad of his list. 
 
+\subsection{The concept of Jñānayoga in the \textit{Yogatattvabindu}}
+
+Jñānayoga steht an zweiter Stelle in Rāmacandra's Taxonomie der fünfzehn Yogas, wird aber nicht als zweites Yoga beschrieben. Dies geschieht von Sektion \uproman{21}-\sektion{22} seines Textes.\footnote{Siehe Kapitel über strukturellen Probleme des \textit{Yogatattvabindu} auf p.\pageref{structuralissues}.} Das übergeordnete Ziel von Rāmacandra's Jñānayoga ist die bereits in der Einleitung (Sektion \uproman{1}) erwähnte long-term durability of the body (\textit{bahutarakālaṃ śarīrasthitiḥ}), die hier nochmal anders formuliert `From the execution of this [Jñānayoga], time does not bring about the destruction of the body' (\textit{tasya kāraṇāt kālaḥ śarīranāśaṃ na karoti}) ausgedrückt wird. Gleichzeitig verhilft Rāmacandra's Jñānayoga dem Übenden die `reality of Śāṃbhavī' (\textit{śāṃbhavīsattā}) zu erlangen.\footnote{Hiermit ist die höchste Realität und der Zustand des Rājayoga gemeint. Siehe S.\pageref{jnanayogatrans1} in der Edition für eine Diskussion des Begriffes.} Dieses Jñānayoga kann auf zweierlei Weise praktiziert werden kann. Die erste Methode (\uproman{21}.1) entsteht durch Anwendung des `non-dualistischen Denkens' (\textit{avikalpatayā yuktyā}) und die zweite Methode (\uproman{21}.2) entsteht durch die Realisierung, dass die gesamte Welt aus allem Wissen besteht (\ldots \textit{sarvajñānamayaṃ jagat} | \textit{ya evaṃ vetti bodhena} \ldots). Allerdings wird im Text primär auf die erste Methode eingegangen. Diese Methode besteht darin, die Welt als eine Einheit zu betrachten, die vom höchste Selbst (\textit{viśvātman}) erleuchtet ist. Nimmt man diese Einheit wahr, so befindet man sich in der `reality of Śāṃbhavī' (\textit{śāṃbhavīsattā}). Allerdings kann die `reality of Śāṃbhavī' nicht ohne Weiteres erkannt werden, da sie sich eben nicht als Einheit zeigt, sondern als eine zehnfache Vielheit (\uproman{21}.4ab). Er vergleicht dieses Verhältnis mit einem Samen (1) aus dem ein ganzer Baum mit seinen Einzelbestanteilen - den Wurzeln (2), Sprossen (3), Stamm (4), Ästen (5), Knospen (6), Zweigen (7), Pflanzensaft (8), Blüthen (9), und Früchten(10) - erwächst (\uproman{21}.4-\uproman{21}.5). Der Same steht für die Einheit. Der Baum mit seinen verschiedenen Teilen für die Vielheit. Die grundlegende Einheit der Welt ist, wie der Same, aus dem bereits ein ganzer komplexer Baum gewachsen ist, nicht mehr sichtbar und wird nicht wahrgenommen. Was jedoch Rāmacandra zufogle wahrgenommen wird, ist eine aus einer Vielheit von zehn Grundprinzipien (\textit{tattva}s) bestehende Welt: fünf [grobstoffliche] Elemente (\textit{pañcatattva}), denkender Verstand (\textit{manas}), Intellekt (\textit{buddhi}), Illusion (\textit{māya}), Individuation (\textit{ahaṃkāra}), und Modifikationen (\textit{vikriyā}).\footnote{Für die Diskussion des zehnfachen \textit{tattva}-Systems siehe S.\pageref{??} n.??? und S.\pageref{??} n. ??}. Mittles Jñānayoga soll die der Vielheilt zu Grunde liegende Einheit erkannt werden (\uproman{21}.7). Hierfür soll der Übende mittels der Sichtweise der Einheit (\textit{aikyena darśanam}) die Unterscheidung zwischen der sichtbaren, aus den zehn Grundprinzipien bestehenden Welt\footnote{Diese wird von Rāmacandra auch als \textit{saṃsāra} bezeichnet (\uproman{21} ll. 7-9.}, welche eine Einheit mit der reinen, ewigen, unwandelbaren und makellosen Realität bildet, die das höchste Selbst (\textit{viśvātma}) ist, und der unsichtbaren Realität des eigenen Selbst, aufheben. Durch Jñānayoga erkennt der Übende dann, dass das Selbst in Wirklichkeit eine Einheit bildet\footnote{Cf. \textit{Yogatattvabindu} \uproman{22} \pageref{svabhava1} l. 5: `Because of the power of Jñānayoga, there arises the conviction that the self is truly one (\textit{jñānayogaprabhāvād eka eva ātmā iti niścayo bhavati}).} und die sich verändernden Formen dessen materieller Erscheinung im Grunde leer\footnote{Cf. \textit{Yogatattvabindu} \uproman{22} p.\pageref{svabhava2} l.3: `Through Jñānayoga he realises the emptiness of the mutability of form' (\textit{jñānayogād vikārarūparahito jñāyate}).} sind.
+
+\subsection{The concept of Jñānayoga in the \textit{Yogasvarodaya}}
+
+Wenn wir von einer Korrekten Überlieferung des \textit{Yogasvarodaya} in der \textit{Prāṇatoṣiṇī} ausgehen, dann bezeichnet dieser Text sogar zwei unterschiedliche Arten von Jñānayoga. 
+
+Das Jñānayoga der ersten Passage\footnote{Cf. \textit{Prāṇatoṣiṇī} Ed. p. 831 l. 4703 - p. 833 l. 4769.} beinhaltet eine Beschreibung wichtiger Bestandteile des yogischen Körpers. Insbesondere werden die drei primären Kanäle (\textit{nāḍī}s\footnote{Der linke Kanal wird hier als 
+
+
+Die Zitate des \textit{Yogasvarodaya} in der \textit{Prāṇatoṣiṇī} (Ed. p. 831 l. 4703 - p. 833 l. 4769), sowie \textit{Prāṇatoṣiṇī} (Ed. p. 835 l. 4824 - p. 837 p. 4872) suggerieren, dass das \textit{Yogasvarodaya} zwei verschiedene Arten von Jñānayoga. Das Jñānayoga der ersten Passage  
+
+
+
+
+
+yatnād dūraṃ parityajya jñānayogo bhavet sudhīḥ |
+jñānasaṃyoga ekas tu ekas tu jñānayogavān |
+
+Nachdem man durch Anstrengung die Distanz [dūram]\footnote{Die scheinbare Kluft zwischen der fragmentierten Welt der zehn \textit{tattva}s und ihrer zu Grunde liegenden inneren Einheit.} aufgegeben hat, entsteht Jñānayoga, oh Weiser! Die Vereinigung mit Wissen ist Einheit, fürwahr, Einheit für denjenigen, der sich dem Yoga des Wissens widmet.
+
+ato hi jñānato 'bhinnaṃ jñeyaṃ jñānāt pṛthak pṛthak |
+dūrīkṛtyaiva mā pṛthvībhedavākyena darśanāt |
+
+Darum wahrlich, durch Wissen als ungeteilt zu wissen, aufgrund von Wissen [der] einzelnen [Bestandteile] nacheinander, also, durch nicht entfernt machen, aufgrund der Sichtweise mittels der Aufteilung der Welt, 
+
+jñānayogī bhaved yena jñānayogas tu caikakaḥ |
+evaṃ jñānān maheśāni ! kālajit śivatāṃ vrajet | 
+
+würde er ein Yogin des Wissens sein, einzig durch solch ein Yoga des Wissens.
+Auf diesem Weise oh große Herrin, möge der Besieger des Todes zum Śivazustand schreiten. 
 
 
 
